--- a/main/main/style.css
+++ b/main/main/style.css
@@ -1,16 +1,15 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
-
 }
 body{
-    background-color: rgb(108, 108, 250);
+    background-color: rgb(255, 177, 149);
 
 }
 main{
     background-color: white;
     width: 500px;
-    margin:auto;
     padding: 10px;
-    box-shadow: 3px 3px 5px rgb(44, 44, 44);
+    margin: auto;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.534);
 }
